Fixed content area stretching to whole width when code blocks exceed line width

--- a/src/assets/stylesheets/main/layout/_content.scss
+++ b/src/assets/stylesheets/main/layout/_content.scss
@@ -26,8 +26,7 @@
 
 // Content container
 .md-content {
-  flex: 1;
-  max-width: 100%;
+  overflow: auto;
 
   // Define spacing
   &__inner {
