--- a/src/assets/stylesheets/main/layout/_sidebar.scss
+++ b/src/assets/stylesheets/main/layout/_sidebar.scss
@@ -51,6 +51,7 @@ $md-toggle__drawer--checked:
 .md-sidebar {
   position: sticky;
   top: px2rem(48px);
+  flex-shrink: 0;
   align-self: flex-start;
   width: px2rem(242px);
   padding: px2rem(24px) 0;
